# renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  custom_code.js  display.txt  display.txt.REMOVED.git-id  fxaa.cpp  netlify.toml  pixeller.cpp  renderscene.h  shell-file.html
gifs/: camera is flash light.gif.REMOVED.git-id  cosine lighting.gif.REMOVED.git-id  font size test.webm  font size test.webm.REMOVED.git-id  head.gif.REMOVED.git-id  latest.gif.REMOVED.git-id  shadow mapping.gif.REMOVED.git-id  shadows vs no shadows.gif.REMOVED.git-id  shadows.gif.REMOVED.git-id  specular lighting teapot.gif.REMOVED.git-id  specular lighting.gif.REMOVED.git-id  teddy bear z-buffer coloring using closeness to camera.gif.REMOVED.git-id  teddy bear.gif.REMOVED.git-id  text size latest.gif.REMOVED.git-id
source/: VertexCalculator.h  camera.h  color.cpp  color.h  display.cpp  display.h  fxaa.cpp  fxaa.cpp.wip  image.cpp  image.h  light.h  obj_loader.h  pixel.cpp  pixel.h  pixeller.cpp  renderscene.h  sfml_header.h  utils.cpp  utils.h
ui/: custom_code.js  game.cbp  game.html  game.js  game.wasm  game.wasm.map  game.worker.js  index.html  index.js  style.css
web/: a.out.js  build.sh  index.html  index.js  index.wasm  index1.js  main.cpp
